# laba4

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 67f64c90287a_initial_commit_with_5_models.py
app/: main.py  seed.py
app/api/: Product.py  auth.py  category.py  deps.py  order.py  product.py  user.py  user_profile.py
app/api/v1/: router.py
app/api/v1/endpoints/: shop.py  users.py
app/core/: config.py  database.py  security.py
app/crud/: Product.py  category.py  crud_shop.py  order.py  product.py  user.py  user_profile.py
app/db/: base.py  base_class.py
app/models/: all_models.py
app/schemas/: Product.py  category.py  order.py  product.py  schemas.py  user.py  user_profile.py
